modules/security/main.tf
# ECS SG - allow HTTP/HTTPS inbound from anywhere
resource "aws_security_group" "ecs_sg" {
  name        = "wp-ecs-sg"
  description = "Allow HTTP/HTTPS to ECS tasks"
  vpc_id      = var.vpc_id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "wp-ecs-sg" }
}

# RDS SG - allow MySQL only from ecs sg
resource "aws_security_group" "rds_sg" {
  name        = "wp-rds-sg"
  description = "Allow MySQL from ECS"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_sg.id]
    description     = "MySQL from ECS tasks"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "wp-rds-sg" }
}
